# nstream-transformer

./: .gitignore  README.md  SETUP.md  pyproject.toml  setup.sh
prototype/: AGENTS.md  role_prefixes.json  seed_texts.json
prototype/configs/: gpt_oss_transfer.yaml  wiki_smoke.yaml
prototype/experiments/teacher_plans/: anarchism.txt
prototype/experiments/wiki-v6-500/staging/: embed_notes_summary.json  embedded_roles_manifest.jsonl  fan_out_roles_detail.json  fan_out_roles_manifest.jsonl  load_multistream_overview.json  load_multistream_samples.jsonl  pack_kd_summary.json  tokenize_roles_summary.json  tokenized_roles_manifest.jsonl  tokenizer_manifest.json
prototype/experiments/wiki_smoke/: run_summary.json
prototype/scripts/: README.md  advance_curriculum.py  analyze_infer_manifest.py  bench_gpt_oss.py  evaluate.py  infer.py  ingest_wikipedia.py  prepare_kd_dataset.py  prepare_wiki_multistream.py  run_data_prep.sh  run_ingest.sh  run_process.sh  run_repro_bundle.sh  setup_lambda_gpu.sh  summarize_run.py  teacher_plan_sections.py  train.py  validate_wiki_schema.py
prototype/src/nstream_transformer/: __init__.py
prototype/tests/integration/: test_curriculum_with_teacher_toggle.py  test_infer_gpt_oss_local.py  test_orchestrator_runtime.py
prototype/tests/unit/: test_collator_kd.py  test_dynamic_notes_bus.py  test_inference_config.py  test_kd_dataset.py  test_notes_window_builder.py  test_nstream_model.py  test_role_adapters.py  test_role_state.py  test_scheduler.py  test_teacher_provider.py  test_trainer_loop.py
scripts/: download_gpt_oss_20b.sh
(+46 files in other folders)
